src/test/deca/context/valid/sansObjet/conFloatExp.deca
{
    float y;
    int x = 3;
    int z = 1;
    y = -x+z;
}