src/test/deca/context/invalid/sansObjet/utilisationAvantDecl.deca
{
    int x = y + 5;
    int y = 10;
}